RFC 3164 syslogをListenする設定

--- a/promtail/config.yml
+++ b/promtail/config.yml
@@ -11,14 +11,31 @@ positions:
   filename: /tmp/positions.yaml
 
 clients:
-- url: http://localhost:3100/loki/api/v1/push
+- url: http://loki.nuc.home.arpa:3100/loki/api/v1/push
 
 scrape_configs:
-- job_name: system
-  static_configs:
-  - targets:
-      - localhost
-    labels:
-      job: varlogs
-      #NOTE: Need to be modified to scrape any additional logs of the system.
-      __path__: /var/log/messages
+  - job_name: syslog
+    syslog:
+      listen_address: 0.0.0.0:1514
+      listen_protocol: udp
+      syslog_format: "rfc3164"
+      label_structured_data: true
+      labels:
+        job: "syslog"
+    relabel_configs:
+      - source_labels: ['__syslog_connection_ip_address']
+        target_label: 'ip_address'
+      - source_labels: ['__syslog_connection_hostname']
+        target_label: 'hostname'
+      - source_labels: ['__syslog_message_severity']
+        target_label: 'severity'
+      - source_labels: ['__syslog_message_facility']
+        target_label: 'facility'
+      - source_labels: ['__syslog_message_hostname']
+        target_label: 'hostname'
+      - source_labels: ['__syslog_message_app_name']
+        target_label: 'app_name'
+      - source_labels: ['__syslog_message_proc_id']
+        target_label: 'proc_id'
+      - source_labels: ['__syslog_message_msg_id']
+        target_label: 'msg_id'
