--- a/promtail/config.yml
+++ b/promtail/config.yml
@@ -14,23 +14,33 @@ clients:
 - url: http://loki.nuc.home.arpa:3100/loki/api/v1/push
 
 scrape_configs:
-  - job_name: syslog
+  - job_name: syslog3164
     syslog:
-      listen_address: 0.0.0.0:1514
+      listen_address: 0.0.0.0:3164
       listen_protocol: udp
       syslog_format: "rfc3164"
-      label_structured_data: true
+      label_structured_data: false
       labels:
         job: "syslog"
+    pipeline_stages:
+      - regex:
+          expression: '^(inbound|BLOCK).+?(?P<ip>[\d.]+).*'
+      - geoip:
+          db: /usr/share/GeoIP/GeoLite2-City.mmdb
+          source: ip
+          db_type: city
+      - labeldrop:
+          - geoip_city_name
+          - geoip_continent_code
+          - geoip_continent_name
+          - geoip_subdivision_code
+          - geoip_subdivision_name
+          - geoip_timezone
     relabel_configs:
       - source_labels: ['__syslog_connection_ip_address']
         target_label: 'ip_address'
-      - source_labels: ['__syslog_connection_hostname']
-        target_label: 'hostname'
       - source_labels: ['__syslog_message_severity']
         target_label: 'severity'
-      - source_labels: ['__syslog_message_facility']
-        target_label: 'facility'
       - source_labels: ['__syslog_message_hostname']
         target_label: 'hostname'
       - source_labels: ['__syslog_message_app_name']
