--- a/promtail/config.yml
+++ b/promtail/config.yml
@@ -39,6 +39,10 @@ scrape_configs:
           db: /usr/share/GeoIP/GeoLite2-City.mmdb
           source: ip
           db_type: city
+      - geoip:
+          db: /usr/share/GeoIP/GeoLite2-ASN.mmdb
+          source: ip
+          db_type: asn
       - labeldrop:
           - geoip_city_name
           - geoip_continent_code
