主に収容ルータからのリンク解決が目的なので、NSからNUDを除外

--- a/promtail/config.yml
+++ b/promtail/config.yml
@@ -24,6 +24,11 @@ scrape_configs:
         job: "syslog"
     pipeline_stages:
       - match:
+          selector: '{app_name="ICP6", proc_id="075"}'
+          stages:
+            - drop:
+                expression: '> fe80::'
+      - match:
           selector: '{app_name="NAT", proc_id="061"}'
           stages:
             - regex:
